// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots matches snapshot for disabled state 1`] = `
<RCTTouchableOpacity
  accessibilityLabel="Disabled"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  activeOpacity={0.7}
  aria-disabled={true}
  aria-label="Disabled"
  disabled={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  ref={null}
  role="button"
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#D1D5DB",
        "borderWidth": 0,
      },
      {
        "height": 48,
        "paddingHorizontal": 20,
      },
      false,
      undefined,
    ]
  }
>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <RCTText
      ref={null}
      style={
        [
          {
            "fontWeight": "700",
          },
          {
            "color": "#9CA3AF",
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="RCTText"
    >
      Disabled
    </RCTText>
  </RCTView>
</RCTTouchableOpacity>
`;

exports[`Button Component Snapshots matches snapshot for loading state 1`] = `
<RCTTouchableOpacity
  accessibilityHint="Loading"
  accessibilityLabel="Loading"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  activeOpacity={0.7}
  aria-disabled={true}
  aria-label="Loading"
  disabled={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  ref={null}
  role="button"
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#F59E0B",
        "borderWidth": 0,
      },
      {
        "height": 48,
        "paddingHorizontal": 20,
      },
      false,
      undefined,
    ]
  }
>
  <RCTActivityIndicator
    color="#1F2937"
    ref={null}
    size="small"
    testID="RCTActivityIndicator"
  />
</RCTTouchableOpacity>
`;

exports[`Button Component Snapshots matches snapshot for primary variant 1`] = `
<RCTTouchableOpacity
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  activeOpacity={0.7}
  aria-disabled={false}
  aria-label="Primary"
  disabled={false}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onPress={[MockFunction]}
  ref={null}
  role="button"
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#F59E0B",
        "borderWidth": 0,
      },
      {
        "height": 48,
        "paddingHorizontal": 20,
      },
      false,
      undefined,
    ]
  }
>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <RCTText
      ref={null}
      style={
        [
          {
            "fontWeight": "700",
          },
          {
            "color": "#1F2937",
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="RCTText"
    >
      Primary
    </RCTText>
  </RCTView>
</RCTTouchableOpacity>
`;
